--- a/Pipfile
+++ b/Pipfile
@@ -1,7 +1,7 @@
-#[[source]]
-#url = "https://pypi.python.org/simple"
-#verify_ssl = true
-#name = "pypi"
+[[source]]
+url = "https://pypi.python.org/simple"
+verify_ssl = true
+name = "pypi"
 
 [[source]]
 url = "http://mirror.kakao.com/pypi/simple/"
@@ -9,11 +9,11 @@ verify_ssl = false
 name = "kakao"
 
 [packages]
-numpy = "==1.14.4"
-"pyqt5" = "==5.10.1"
-pandas = "==0.23.0"
 numexpr = "==2.6.5"
 bottleneck = "==1.2.1"
+"pyqt5" = "==5.11.2"
+numpy = "==1.14.5"
+pandas = "==0.23.1"
 
 [dev-packages]
 pytest = "==3.6.0"
